--- a/Lets_FindUs/app/src/main/res/layout/activity_main.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_main.xml
@@ -2,35 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    tools:context=".MainActivity">
 
 
-    <!-- Bottone on (bluetooth) -->
     <Button
-        android:id="@+id/scan_button"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:id="@+id/client"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="200dp"
-        android:text="Scan Button"
+        android:text="Client"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- RecyclerView -->
+
+    <!-- RecyclerView
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scan_results_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/scan_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/row_scan_result"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/row_scan_result" /> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
