--- a/Lets_FindUs/app/src/main/res/layout/activity_client.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_client.xml
@@ -91,6 +91,20 @@
 
         </LinearLayout>
 
+        <ScrollView
+            android:id="@+id/log_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="top"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/log_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </ScrollView>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
