--- a/Lets_FindUs/app/src/main/res/menu/main_act_menu.xml
+++ b/Lets_FindUs/app/src/main/res/menu/main_act_menu.xml
@@ -6,8 +6,7 @@
             android:id="@+id/search"
             android:icon="@drawable/ic_round_search_24"
             android:title="@string/search"
-            app:showAsAction="always|collapseActionView"
-            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+            app:showAsAction="always|collapseActionView"/>
         <item
             android:id="@+id/filter_match"
             android:icon="@drawable/ic_round_filter_list_24"
