--- a/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
@@ -11,8 +11,7 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="0dp"
-        android:layout_marginBottom="15dp">
+        android:padding="0dp">
 
     </FrameLayout>
 
@@ -45,8 +44,8 @@
         android:elevation="5dp"
         app:cardElevation="20dp"
 
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="20dp"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
 
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
