--- a/Lets_FindUs/app/src/main/res/layout/cards_layout.xml
+++ b/Lets_FindUs/app/src/main/res/layout/cards_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,54 +9,92 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/cardview_light_background"
+        android:layout_height="145dp"
         android:elevation="8dp"
-        card_view:cardElevation="5dp"
+        card_view:cardBackgroundColor="@color/cardview_light_background"
         card_view:cardCornerRadius="10dp"
+        card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/circularImageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_favourites_black_24dp"
-                android:tag="image_tag" />
+                android:transitionName="@string/image_transition"
+                card_view:civ_border_color="@color/colorPrimary"
+                card_view:civ_border_width="3dp"
+                card_view:civ_shadow="true"
+                card_view:civ_shadow_color="#b0bec5"
+                card_view:civ_shadow_radius="2dp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="16dp"
+                card_view:layout_constraintStart_toEndOf="@+id/circularImageView5"
+                card_view:layout_constraintTop_toBottomOf="@+id/textView9"
+                card_view:srcCompat="@drawable/ic_round_calendar_today_24" />
+
+            <TextView
+                android:id="@+id/textView9"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="2"
-                android:orientation="vertical">
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toEndOf="@+id/circularImageView5"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="TextView"
+                android:textSize="16sp"
+                card_view:layout_constraintBottom_toBottomOf="@+id/imageView10"
+                card_view:layout_constraintStart_toEndOf="@+id/imageView10"
+                card_view:layout_constraintTop_toTopOf="@+id/imageView10" />
 
-                <TextView
-                    android:id="@+id/textViewVersion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:text="ciao"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                card_view:layout_constraintStart_toEndOf="@+id/circularImageView5"
+                card_view:layout_constraintTop_toBottomOf="@+id/imageView10"
+                card_view:srcCompat="@drawable/ic_round_watch_later_24" />
 
-            </LinearLayout>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="TextView"
+                android:textSize="16sp"
+                card_view:layout_constraintBottom_toBottomOf="@+id/imageView11"
+                card_view:layout_constraintStart_toEndOf="@+id/imageView11"
+                card_view:layout_constraintTop_toTopOf="@+id/imageView11" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
